Feat: Add inheritance between templates

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -1,2 +1,6 @@
 <!-- Page for adding book, will be form -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 Add a new book here
+{% endblock %}
