--- a/templates/book.html
+++ b/templates/book.html
@@ -1,4 +1,7 @@
 <!-- Page displaying book detail -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 This will show:
 title
 author
@@ -6,3 +9,4 @@ genre
 description
 
 edit/delete
+{% endblock %}
