--- a/templates/deletebook.html
+++ b/templates/deletebook.html
@@ -1,2 +1,6 @@
 <!-- Page for deleting book, will ask for confirmation -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 delete book
+{% endblock %}
