--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -1,6 +1,10 @@
 <!-- Page for editing book, will be form -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 Edit details about a book here
 title
 author
 genre
 description
+{% endblock %}
