--- a/templates/genrelist.html
+++ b/templates/genrelist.html
@@ -1,6 +1,10 @@
 <!-- Page for seeing all books of a selected genre in a user's list -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 Will display with edit/delete buttons:
 Genre Name
 - book 1 edit/delete
 - book 2 edit/delete
 - etc
+{% endblock %}
