--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 <html>
     <!-- Code for Google Sign in to go here -->
     This will have the Google Login button
 </html>
+{% endblock %}
