--- a/templates/publicbook.html
+++ b/templates/publicbook.html
@@ -1,6 +1,10 @@
 <!-- Page displaying sample book detail -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 This will show the following for a sample book:
 title
 author
 genre
 description
+{% endblock %}
