--- a/templates/publicgenrelist.html
+++ b/templates/publicgenrelist.html
@@ -1,6 +1,10 @@
 <!-- Page for seeing all books of a selected genre from sample list -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 Will display for sample books:
 Genre Name
 - book 1
 - book 2
 - etc
+{% endblock %}
