--- a/templates/publiclist.html
+++ b/templates/publiclist.html
@@ -1,6 +1,10 @@
 <!-- Page for seeing all books from sample list -->
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
 Will display list of all books from sample list in database:
 
 Book name (genre)
 Book name (genre)
 etc.
+{% endblock %}
