--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
 <!-- File for the header html -->
-will show:
-Sample/[Name's] Reading List
-Login/Logout button
+<div class="header">
+    <h1>Let's Read</h1>
+</div>
