--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,25 @@
 	<head>
 	</head>
 	<body>
-		<div>
+        <div id="sidebar">
+            <a href="#">Home</a>
+            <a href="#">Children/Young Adult</a>
+            <a href="#">Graphic Novel</a>
+            <a href="#">Classic</a>
+            <a href="#">Fantasy</a>
+            <a href="#">Horror</a>
+            <a href="#">SciFi</a>
+            <a href="#">Suspense/Thriller</a>
+            <a href="#">Western</a>
+            <a href="#">Romance</a>
+            <a href="#">Mystery/Crime</a>
+            <a href="#">Poetry</a>
+            <a href="#">Anthology</a>
+            <a href="#">General Fiction</a>
+            <a href="#">Non-Fiction</a>
+            <a href="#">Other</a>
+        </div>
+		<div class="main">
 			{% block content %}
 			{% endblock %}
 		</div>
