--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -2,9 +2,44 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-Edit details about a book here
-title
-author
-genre
-description
+<div class="banner">
+    <h3>Book Title</h3>
+    Update book information:
+</div>
+<div class="forms">
+    <form action="#" method="POST">
+        <label for="title">Title:</label>
+        <input type="text" name="title" placeholder="Current Title"><br><br>
+
+        <label for="author">Author:</label>
+        <input type="text" name="author" placeholder="Current Author"><br><br>
+
+        <label for="description">Description:</label><br>
+        <textarea maxlength="350" rows="5" name="description" placeholder="Current Description">
+        </textarea><br>
+
+        <label for="genre">Genre:</label>
+        <input list="genres" name="genre" placeholder="Current Genre">
+        <datalist id= "genres">
+            <option value="Children/Young Adult">
+            <option value="Graphic Novel">
+            <option value="Classic">
+            <option value="Fantasy">
+            <option value="Horror">
+            <option value="SciFi">
+            <option value="Suspense/Thriller">
+            <option value="Western">
+            <option value="Romance">
+            <option value="Mystery/Crime">
+            <option value="Poetry">
+            <option value="Anthology">
+            <option value="General Fiction">
+            <option value="Non-Fiction">
+            <option value="Other">
+        </datalist>
+        <br><br>
+        <button type="submit" id="submit">Update</button>
+    </form>
+    <h4><a href="#">Cancel</a></h4>
+</div>
 {% endblock %}
