Refactor: minor tweaks to format of add and edit forms

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -15,8 +15,8 @@
         <input type="text" name="author"><br><br>
 
         <label for="description">Description:</label><br>
-        <textarea maxlength="350" rows="5" name="description" placeholder="Optional - enter a brief description of plot">
-        </textarea><br>
+        <textarea maxlength="350" rows="5" cols="50" name="description" placeholder="Optional - enter a brief description of plot">
+        </textarea><br><br>
 
         <label for="genre">Genre:</label>
         <div class="radio">
