--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -15,28 +15,28 @@
         <input type="text" name="author" placeholder="Current Author"><br><br>
 
         <label for="description">Description:</label><br>
-        <textarea maxlength="350" rows="5" name="description" placeholder="Current Description">
-        </textarea><br>
+        <textarea maxlength="350" rows="5" cols="50" name="description" placeholder="Current Description">
+        </textarea><br><br>
 
         <label for="genre">Genre:</label>
-        <input list="genres" name="genre" placeholder="Current Genre">
-        <datalist id= "genres">
-            <option value="Children/Young Adult">
-            <option value="Graphic Novel">
-            <option value="Classic">
-            <option value="Fantasy">
-            <option value="Horror">
-            <option value="SciFi">
-            <option value="Suspense/Thriller">
-            <option value="Western">
-            <option value="Romance">
-            <option value="Mystery/Crime">
-            <option value="Poetry">
-            <option value="Anthology">
-            <option value="General Fiction">
-            <option value="Non-Fiction">
-            <option value="Other">
-        </datalist>
+        <select name="genres">
+            <option disabled selected value> -- select genre -- </option>
+            <option value="Children/Young Adult">Children/Young Adult</option>
+            <option value="Graphic Novel">Graphic Novel</option>
+            <option value="Classic">Classic</option>
+            <option value="Fantasy">Fantasy</option>
+            <option value="Horror">Horror</option>
+            <option value="SciFi">SciFi</option>
+            <option value="Suspense/Thriller">Suspense/Thriller</option>
+            <option value="Western">Western</option>
+            <option value="Romance">Romance</option>
+            <option value="Mystery/Crime">Mystery/Crime</option>
+            <option value="Poetry">Poetry</option>
+            <option value="Anthology">Anthology</option>
+            <option value="General Fiction">General Fiction</option>
+            <option value="Non-Fiction">Non-Fiction</option>
+            <option value="Other">Other</option>
+        </select>
         <br><br>
         <button type="submit" id="submit">Update</button>
     </form>
