Feat: Replace placeholders with functional links

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -83,6 +83,6 @@
         <br><br>
         <button type="submit" id="submit">Add</button>
     </form>
-    <h4><a href="#">Cancel</a></h4>
+    <h4><a href="{{url_for('viewReadingList')}}">Cancel</a></h4>
 </div>
 {% endblock %}
