--- a/templates/book.html
+++ b/templates/book.html
@@ -2,6 +2,7 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
+For logged in users<br>
 This will show:
 title
 author
