--- a/templates/deletebook.html
+++ b/templates/deletebook.html
@@ -6,10 +6,10 @@
     <h3>Book Title</h3>
     Are you sure you want to delete this book from your list?
 </div>
-<div>
-    <form class="delete" action="#" method="POST">
+<div class="forms">
+    <form action="#" method="POST">
         <input type="submit" value="Confirm Delete">
     </form>
-    <h4><a href="#">Cancel</a></h4>
+    <h4><a href="{{url_for('viewReadingList')}}">Cancel</a></h4>
 </div>
 {% endblock %}
