--- a/templates/publicbook.html
+++ b/templates/publicbook.html
@@ -2,9 +2,14 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
+<div class="banner">
+    <h3>Detail for Book:</h3>
+</div>
+<div class="contents">
 This will show the following for a sample book:
 title
 author
 genre
 description
+</div>
 {% endblock %}
