--- a/templates/publiclist.html
+++ b/templates/publiclist.html
@@ -2,9 +2,14 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
+<div class="banner">
+    <h3>Here's some books you might like to read:</h3>
+</div>
+<div class="contents">
 Will display list of all books from sample list in database:
 
 Book name (genre)
 Book name (genre)
 etc.
+</div>
 {% endblock %}
