Feat: Add Read functionality to public endpoints

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -20,7 +20,7 @@
 
         <label for="genre">Genre:</label>
         <div class="radio">
-            <input type="radio" name="genre" value="Children/Young Adult">
+            <input type="radio" name="genre" value="Children-Young Adult">
             Children/Young Adult
             </input><br>
 
@@ -44,7 +44,7 @@
             SciFi
             </input><br>
 
-            <input type="radio" name="genre" value="Suspense/Thriller">
+            <input type="radio" name="genre" value="Suspense-Thriller">
             Suspense/Thriller
             </input><br>
 
@@ -56,7 +56,7 @@
             Romance
             </input><br>
 
-            <input type="radio" name="genre" value="Mystery/Crime">
+            <input type="radio" name="genre" value="Mystery-Crime">
             Mystery/Crime
             </input><br>
 
