--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -21,16 +21,16 @@
         <label for="genre">Genre:</label>
         <select name="genres">
             <option disabled selected value> -- select genre -- </option>
-            <option value="Children/Young Adult">Children/Young Adult</option>
+            <option value="Children-Young Adult">Children/Young Adult</option>
             <option value="Graphic Novel">Graphic Novel</option>
             <option value="Classic">Classic</option>
             <option value="Fantasy">Fantasy</option>
             <option value="Horror">Horror</option>
             <option value="SciFi">SciFi</option>
-            <option value="Suspense/Thriller">Suspense/Thriller</option>
+            <option value="Suspense-Thriller">Suspense/Thriller</option>
             <option value="Western">Western</option>
             <option value="Romance">Romance</option>
-            <option value="Mystery/Crime">Mystery/Crime</option>
+            <option value="Mystery-Crime">Mystery/Crime</option>
             <option value="Poetry">Poetry</option>
             <option value="Anthology">Anthology</option>
             <option value="General Fiction">General Fiction</option>
