--- a/templates/main.html
+++ b/templates/main.html
@@ -2,10 +2,18 @@
 <!-- Main Template others build on  -->
 <html lang="en">
 	<head>
+        <!--Google sign in scripts -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+        </script>
+        <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 	</head>
 	<body>
         <div id="sidebar">
-            <a href="{{url_for('showLogin')}}">Login</a><br>
+            {%if 'username' not in session %}
+			         <a href="{{url_for('showLogin')}}">Login</a><br>
+		    {% else %}
+			         <a href="{{url_for('disconnect')}}">Logout </a>
+		    {% endif %}
             <a href="{{url_for('viewReadingList')}}">Home</a><br>
             <a href="{{url_for('viewGenre', genre='Children-Young Adult')}}">Children/Young Adult</a>
             <a href="{{url_for('viewGenre', genre='Graphic Novel')}}">Graphic Novel</a>
