--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -3,24 +3,23 @@
 {% block content %}
 {% include "header.html" %}
 <div class="banner">
-    <h3>Book Title</h3>
+    <h3>{{book.title}}</h3>
     Update book information:
 </div>
 <div class="forms">
     <form action="#" method="POST">
         <label for="title">Title:</label>
-        <input type="text" name="title" placeholder="Current Title"><br><br>
+        <input type="text" name="title" placeholder="{{book.title}}"><br><br>
 
         <label for="author">Author:</label>
-        <input type="text" name="author" placeholder="Current Author"><br><br>
+        <input type="text" name="author" placeholder="{{book.author}}"><br><br>
 
         <label for="description">Description:</label><br>
-        <textarea maxlength="350" rows="5" cols="50" name="description" placeholder="Current Description">
-        </textarea><br><br>
+        <textarea maxlength="350" rows="5" cols="50" name="description">{{book.description}}</textarea><br><br>
 
         <label for="genre">Genre:</label>
-        <select name="genres">
-            <option disabled selected value> -- select genre -- </option>
+        <select name="genre">
+            <option disabled selected value>{{book.genre}}</option>
             <option value="Children-Young Adult">Children/Young Adult</option>
             <option value="Graphic Novel">Graphic Novel</option>
             <option value="Classic">Classic</option>
