--- a/templates/publicgenrelist.html
+++ b/templates/publicgenrelist.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% include "header.html" %}
 <div class="banner">
-    <h3>Here are all your {{genre}} books:</h3>
+    <h3>Here are all the {{genre}} books:</h3>
 </div>
 <div class="contents">
     <ul>
