--- a/templates/deletebook.html
+++ b/templates/deletebook.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% include "header.html" %}
 <div class="banner">
-    <h3>Book Title</h3>
+    <h3>{{book.title}}</h3>
     Are you sure you want to delete this book from your list?
 </div>
 <div class="forms">
