--- a/templates/genrelist.html
+++ b/templates/genrelist.html
@@ -2,9 +2,17 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-Will display with edit/delete buttons:
-Genre Name
-- book 1 edit/delete
-- book 2 edit/delete
-- etc
+<div class="banner">
+    <h3>Here are all the {{genre}} books:</h3>
+</div>
+<div class="contents">
+    <ul>
+    {% if books %}
+        {% for book in books %}
+        <li><a class="title" href="{{url_for('viewBook', id=book.id)}}">{{book.title}}</a> by {{book.author}} <span class='ed-del'><a href="{{url_for('editBook', id=book.id)}}">Edit</a> or <a href="{{url_for('deleteBook', id=book.id)}}">Delete</a> Book</span>
+        {% endfor %}
+    {% endif %}
+        <li><a href="{{url_for('addBook')}}">Add a new book to read</a>
+    </ul>
+</div>
 {% endblock %}
