--- a/templates/main.html
+++ b/templates/main.html
@@ -10,9 +10,14 @@
 	<body>
         <div id="sidebar">
             {%if 'username' not in session %}
-			         <a href="{{url_for('showLogin')}}">Login</a><br>
+            <div class='login-out'>
+			    <a href="{{url_for('showLogin')}}">Login</a> to view your reading list.<br>
+            </div>
 		    {% else %}
-			         <a href="{{url_for('disconnect')}}">Logout </a>
+            <div class='login-out'>
+                Logged in as {{name}}
+			    <a href="{{url_for('disconnect')}}">Logout </a>
+            </div>
 		    {% endif %}
             <a href="{{url_for('viewReadingList')}}">Home</a><br>
             <a href="{{url_for('viewGenre', genre='Children-Young Adult')}}">Children/Young Adult</a>
