--- a/templates/publicgenrelist.html
+++ b/templates/publicgenrelist.html
@@ -6,10 +6,14 @@
     <h3>Here are all the {{genre}} books:</h3>
 </div>
 <div class="contents">
+    {% if books %}
     <ul>
         {% for book in books %}
         <li><a class="title" href="{{url_for('viewBook', id=book.id)}}">{{book.title}}</a> by {{book.author}}
         {% endfor %}
     </ul>
+    {% else %}
+    There are no books on this list for the genre "{{genre}}".
+    {% endif %}
 </div>
 {% endblock %}
