Feat: add styling to app

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -6,8 +6,8 @@
     <h3>What else would you like to read?</h3>
     Add a book to your list here:
 </div>
-<div class="forms">
-    <form action="#" method="POST">
+<div class="contents">
+    <form action="{{url_for('addBook')}}" method="POST">
         <label for="title">Title:</label>
         <input type="text" name="title"><br><br>
 
