--- a/templates/deletebook.html
+++ b/templates/deletebook.html
@@ -6,8 +6,8 @@
     <h3>{{book.title}}</h3>
     Are you sure you want to delete this book from your list?
 </div>
-<div class="forms">
-    <form action="#" method="POST">
+<div class="contents">
+    <form action="{{url_for('deleteBook', id=book.id)}}" method="POST">
         <input type="submit" value="Confirm Delete">
     </form>
     <h4><a href="{{url_for('viewReadingList')}}">Cancel</a></h4>
