--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -6,8 +6,8 @@
     <h3>{{book.title}}</h3>
     Update book information:
 </div>
-<div class="forms">
-    <form action="#" method="POST">
+<div class="contents">
+    <form action="{{url_for('editBook', id=book.id)}}" method="POST">
         <label for="title">Title:</label>
         <input type="text" name="title" placeholder="{{book.title}}"><br><br>
 
