--- a/templates/main.html
+++ b/templates/main.html
@@ -2,23 +2,24 @@
 <!-- Main Template others build on  -->
 <html lang="en">
 	<head>
+        <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Josefin+Slab" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
+
         <!--Google sign in scripts -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
         </script>
         <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 	</head>
 	<body>
-        <div id="sidebar">
+        <div class="sidebar">
+            <div class='login'>
             {%if 'username' not in session %}
-            <div class='login-out'>
-			    <a href="{{url_for('showLogin')}}">Login</a> to view your reading list.<br>
-            </div>
+			    <a class='login' href="{{url_for('showLogin')}}">Login to view your reading list.</a><br>
 		    {% else %}
-            <div class='login-out'>
-                Logged in as {{name}}
-			    <a href="{{url_for('disconnect')}}">Logout </a>
-            </div>
+                <span class='login'>Logged in as {{name}}</span>
+			    <a class='login' href="{{url_for('disconnect')}}">Logout </a>
 		    {% endif %}
+            </div>
             <a href="{{url_for('viewReadingList')}}">Home</a><br>
             <a href="{{url_for('viewGenre', genre='Children-Young Adult')}}">Children/Young Adult</a>
             <a href="{{url_for('viewGenre', genre='Graphic Novel')}}">Graphic Novel</a>
