--- a/templates/readinglist.html
+++ b/templates/readinglist.html
@@ -2,18 +2,14 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-<div class = 'flash'>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul style="list-style: none;">
-    {% for message in messages %}
-        <li> <strong> {{ message }} </strong>
-    {% endfor %}
-    </ul>
-    {% endif %}
-{% endwith %}
-</div>
 <div class="banner">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <p class='flash'><strong>{{ message }}</strong></p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <h3>Here's the books you want to read:</h3>
 </div>
 <div class="contents">
